[package]
version = "0.1.0"
name = "higher-lower"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Isak Østrem Hellemo <isak.hellemo@amedia.no>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
rand = "0.8.5"
seed = "0.8.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
